[package]
name = "snowflake-proxy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
webrtc = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
base64 = "0.21"
regex = "1.9"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
